--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,25 +4,50 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.MainActivity">
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="32dp"
+            android:gravity="center"
+            android:maxLines="2"
+            android:text="好きな残り時間(分)を\nPUSH通知でお知らせできます"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/notification_timer" />
 
     <EditText
             android:id="@+id/notification_timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:maxLines="1"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1440" />
+
+    <TextView
+            android:id="@+id/hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:maxLines="1"
+            android:text="※1から1440までを指定できます"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/notification_timer" />
 
     <Button
             android:id="@+id/save"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SAVE"
-            app:layout_constraintTop_toBottomOf="@id/notification_timer"
-            app:layout_constraintStart_toStartOf="@id/notification_timer" />
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp"
+            android:text="設定を保存する"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hint" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
