--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,9 +5,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.MainActivity">
+        tools:context=".ui.top.MainActivity">
+
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@id/setting_description"
+            app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="通知設定をオン/オフできます"
+                android:textSize="18sp" />
+
+        <Switch
+                android:id="@+id/toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp" />
+
+    </FrameLayout>
+
 
     <TextView
+            android:id="@+id/setting_description"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginBottom="32dp"
@@ -21,6 +45,7 @@
             android:id="@+id/notification_timer"
             android:layout_width="200dp"
             android:layout_height="40dp"
+            android:inputType="text"
             android:maxLines="1"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
