--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background"
         tools:context=".ui.top.MainActivity">
-
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/background" />
 
     <TextView
             android:id="@+id/timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#F9F5D1"
+            android:textColor="@color/defaultTextColor"
             android:textSize="120sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/description"
@@ -33,13 +27,12 @@
             android:gravity="center"
             android:maxLines="1"
             android:text="minutes out of 1440"
-            android:textColor="#F9F5D1"
+            android:textColor="@color/defaultTextColor"
             android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="minutes out of 1440 minutes" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
