--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="background">#00A968</color>
-    <color name="defaultTextColor">#F9F5D1</color>
+    <color name="displayTextColor">#F9F5D1</color>
+    <color name="defaultTextColor">#D3D3D3</color>
 </resources>
