--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,147 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/default_background"
-    android:orientation="vertical"
-    tools:context=".ui.top.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/woody_dark"
-        app:layout_constraintTop_toTopOf="parent">
+    <data>
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            app:contentInsetStartWithNavigation="0dp"
-            app:layout_constraintTop_toTopOf="parent" />
+        <import type="android.view.View" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <variable
+            name="viewModel"
+            type="com.example.a1440.ui.setting.SettingViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:background="@color/default_background"
+        android:orientation="vertical"
+        tools:context=".ui.top.MainActivity">
 
-        <FrameLayout
-            android:id="@+id/switch_container"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/woody_dark"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|center_vertical"
-                android:text="通知設定"
-                android:textColor="@color/color_text_default"
-                android:textSize="@dimen/text_size_common" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/toggle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_vertical" />
-        </FrameLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/setting_timer_container"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="18dp"
-            app:layout_constraintTop_toBottomOf="@id/switch_container">
-
-            <TextView
-                android:id="@+id/setting_description"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxLines="2"
-                android:text="設定した残り時間になったら\n通知でお知らせします"
-                android:textColor="@color/color_text_default"
-                android:textSize="@dimen/text_size_common"
+                android:minHeight="?attr/actionBarSize"
+                app:contentInsetStartWithNavigation="0dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:id="@+id/timer_frame"
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize">
+
+            <FrameLayout
+                android:id="@+id/switch_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="18dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/setting_description">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="残り"
+                    android:layout_gravity="start|center_vertical"
+                    android:text="通知設定"
                     android:textColor="@color/color_text_default"
                     android:textSize="@dimen/text_size_common" />
 
-                <EditText
-                    android:id="@+id/notification_timer"
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/toggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:checked="@={viewModel.checked}"
+                    android:onClick="@{() -> viewModel.onSwitchStatusChanged()}" />
+            </FrameLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/setting_timer_container"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="18dp"
+                android:visibility="@{viewModel.timerContainerVisibility ? View.VISIBLE : View.GONE}"
+                app:layout_constraintTop_toBottomOf="@id/switch_container">
+
+                <TextView
+                    android:id="@+id/setting_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
                     android:gravity="center"
-                    android:inputType="text"
-                    android:maxLines="1"
+                    android:maxLines="2"
+                    android:text="設定した残り時間になったら\n通知でお知らせします"
                     android:textColor="@color/color_text_default"
-                    android:textSize="@dimen/text_size_large"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="@dimen/text_size_common"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/timer_frame"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="18dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/setting_description">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="残り"
+                        android:textColor="@color/color_text_default"
+                        android:textSize="@dimen/text_size_common" />
+
+                    <EditText
+                        android:id="@+id/notification_timer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:text="@={viewModel.currentSettingMinutes}"
+                        android:textColor="@color/color_text_default"
+                        android:textSize="@dimen/text_size_large"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="1440" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="分"
+                        android:textColor="@color/color_text_default"
+                        android:textSize="@dimen/text_size_common" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/hint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="18dp"
+                    android:maxLines="1"
+                    android:text="※1から1440までを指定できます"
+                    android:textColor="@color/color_text_default"
+                    android:textSize="@dimen/text_size_small"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="1440" />
+                    app:layout_constraintTop_toBottomOf="@id/timer_frame" />
 
-                <TextView
+                <Button
+                    android:id="@+id/save"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="分"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="18dp"
+                    android:background="@drawable/background_button_rounded_corners"
+                    android:gravity="center"
+                    android:onClick="@{() -> viewModel.onSaveClick()}"
+                    android:paddingStart="18dp"
+                    android:paddingEnd="18dp"
+                    android:text="設定を保存する"
                     android:textColor="@color/color_text_default"
-                    android:textSize="@dimen/text_size_common" />
-            </LinearLayout>
+                    android:textSize="@dimen/text_size_common"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/hint" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="18dp"
-                android:maxLines="1"
-                android:text="※1から1440までを指定できます"
-                android:textColor="@color/color_text_default"
-                android:textSize="@dimen/text_size_small"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/timer_frame" />
-
-            <Button
-                android:id="@+id/save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="18dp"
-                android:background="@drawable/background_button_rounded_corners"
-                android:gravity="center"
-                android:paddingStart="18dp"
-                android:paddingEnd="18dp"
-                android:text="設定を保存する"
-                android:textColor="@color/color_text_default"
-                android:textSize="@dimen/text_size_common"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/hint" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
