--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/woody_common"
-    tools:context=".ui.top.MainActivity">
+    tools:context="sho.ushikubo.a1440.ui.top.MainActivity">
 
     <TextView
         android:id="@+id/timer"
